--- a/css/projects.css
+++ b/css/projects.css
@@ -1,7 +1,7 @@
 .version.projects /* version checker */
 {
-	color: #000018;
-	background-color: #425F92;
+	color: #0000E4;
+	background-color: #E30B54;
 }
 
 .html
@@ -275,13 +275,13 @@
 {
 	z-index: 83;
 	width: 980px;
-	height: 546px;
+	height: 490px;
 	background-color: #FFFFFF;
 	opacity: 0.9;
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=90)";
 	filter: alpha(opacity=90);
 	border-radius: 16px;
-	margin-bottom: -64px;
+	margin-bottom: -8px;
 	position: relative;
 	margin-right: -10000px;
 	left: -54px;
